fix: resolve critical security vulnerabilities in dependencies

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix client",
@@ -12,12 +12,16 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "server:debug": "nodemon --inspect server.js",
     "dev:debug": "concurrently \"npm run server:debug\" \"npm run client\"",
-    "render-postbuild": "npm install --prefix client && npm run build --prefix client && node scripts/render-postbuild.js"
+    "render-postbuild": "npm install --prefix client && npm run build --prefix client && node scripts/render-postbuild.js",
+    "lint": "eslint . && npm run lint --prefix client",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^6.0.0",
     "browserify-zlib": "^0.2.0",
     "concurrently": "^8.2.2",
     "cors": "^2.8.5",
@@ -25,7 +29,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.3",
     "joi": "^17.4.2",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.3",
     "lucide-react": "^0.396.0",
     "mongoose": "^6.6.6",
     "nodemon": "^3.1.0",
@@ -42,5 +46,13 @@
   },
   "engines": {
     "node": ">=18.12.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-node": "^11.1.0",
+    "jest": "^27.5.1",
+    "prettier": "^3.8.1"
   }
 }
